Added generator factory method. (#6)